# codenames-solvers

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CodeName.py  Googlew Word2Vec.url  Makefile  README.md  clean_vocabulary.py  explanation_video.ipynb  functions.py  main.py  nx.html  playground.py  pyproject.toml  requirements-dev.txt  requirements-video.txt  requirements.txt  setup.py  words.txt.REMOVED.git-id
.github/actions/lint-install/: action.yml
.github/workflows/: lint.yml  pipeline.yml  tests.yml  video.yml
codenames/: model_loader.py  playground.py  utils.py
codenames/boards/: english.py  hebrew.py
codenames/game/: __init__.py  base.py  builder.py  exceptions.py  manager.py  player.py  runner.py  state.py
codenames/old/: functions.py  main.py  make_lynx_graph.py  playground.py
codenames/online/: .gitignore  __init__.py  main.py  online_adapter.py  online_game_manager.py  utils.py
codenames/solvers/: __init__.py  cli_players.py  sna_hinter.py
codenames/solvers/complex/: complex_hinter.py
codenames/solvers/naive/: __init__.py  naive_cli_guesser.py  naive_guesser.py  naive_hinter.py
codenames/solvers/olympic/: board_heuristic.py  board_heuristics.py  memory.py  olympic_hinter.py  similarity_cache.py
codenames/solvers/sna_solvers/: __init__.py  sna_guesser.py  sna_hinter.py  sna_naive_hinter.py  sna_phys_hinter.py
codenames/solvers/utils/: algebra.py  models.py  words.py
codenames/tests/: constants.py  small_model.csv  testing_players.py
codenames/tests/integration_tests/: game_manager_test.py  naive_flow_test.py
codenames/tests/unit_tests/: board_test.py  game_manager_test.py  player_test.py
codenames/utils/: __init__.py  async_task_manager.py  files.py  logging.py
codenames/utils/loader/: model_loader.py
codenames_solvers/gpt/: gpt_operative.py  gpt_player.py  gpt_spymaster.py  moves.py
codenames_solvers/models/: cache.py  identifier.py  loader.py
codenames_solvers/naive/: naive_duet.py  naive_operative.py  naive_player.py  naive_spymaster.py  proposal_generator.py
codenames_solvers/olympic/: board_heuristics.py  olympic_spymaster.py
codenames_solvers/other/: naive_cli_operative.py
codenames_solvers/sna/: sna_spymaster.py
codenames_solvers/utils/: logging.py
data_preperation/: clean_vocabulary.py  download_models.py
etc/data_preperation/: clean_vocabulary.py  download_models.py
etc/old/: main.py
etc/visualizer/: make_lynx_graph.py
etc/visualizer/graphs_data/: apollo_bad.csv  beneath_good.csv  ceilings_good.csv  delete_me.csv  father.csv  gear_good.csv  planets.csv  rescue_good.csv  rhino_bad.csv  serpent_bad.csv
etc/visualizer/network/: vis-network-original.min.js  vis-network.min.js
language_data/: .gitignore  model_loader.py  npy_models_loader.py  placeholder.txt
language_data/hebrew/: hebrew_loader.py
playground/: __init__.py  asaf.ipynb  asaf.py  gpt.ipynb  model_adapters.py  offline.py  offline_sna.py  online.py  online_codenames_game.py  online_namecoding.py  online_new.py  printer.py  sna.ipynb  vectors.py
playground/boards/: __init__.py  english.py  hebrew.py
solvers/: cli_players.py  sna_hinter.py
solvers/cli/: __init__.py  cli_players.py
solvers/gpt/: __init__.py  gpt_guesser.py  gpt_hinter.py  gpt_player.py  gpt_spymaster.py  instructions.py  prompts.json
solvers/models/: __init__.py  adapters.py  cache.py  identifier.py  loader.py
solvers/models/loader/: __init__.py  loader.py
solvers/naive/: __init__.py  naive_cli_guesser.py  naive_duet.py  naive_guesser.py  naive_hinter.py  naive_player.py  naive_spymaster.py  proposal_generator.py
solvers/olympic/: __init__.py  board_heuristics.py  olympic_hinter.py  olympic_spymaster.py
solvers/other/: naive_cli_guesser.py
solvers/sna/: __init__.py  sna_hinter.py  sna_spymaster.py
solvers/utils/: __init__.py  algebra.py  async_task_manager.py
solvers/utils/loader/: __init__.py
src/: functions.py  game.py  main.py  playground.py  visualizer.py  words.py
src/old/: main.py
src/solvers/: abstract_hinter.py
src/solvers/sna_solvers/: sna_hinter.py
tests/: __init__.py  conftest.py  naive_flow_test.py  test_adapters.py  test_cli_players.py  test_models.py  test_naive_flow.py  test_naive_flow_classical.py  test_solvers_import.py  testing_players.py
tests/integration_tests/: game_manager_test.py  naive_flow_test.py
tests/resources/: resource_manager.py  small_model.csv  words.py
tests/unit_tests/: board_test.py  card_test.py  game_manager_test.py  game_runner_test.py  game_state_test.py
utils/: logging.py
videos/: explanation.py  gource-all.sh  intro.py  merge_videos.py  subtitles.srt
visualizer/: Subtitles.srt  Subtitles_main.srt  explanation_video.ipynb  explanation_video.py  make_lynx_graph.py  nx.html
visualizer/graphs_data/: advice.csv  dark_bad_choose_it.csv  international_good.csv  redevelopment_fine.csv  royal.csv  severe.csv
