# Poetry

[tool.poetry]
name = "codenames-solvers"
version = "1.4.5"
description = "Solvers implementation for Codenames board game in python."
authors = ["Asaf Kali <asaf.kali@mail.huji.ac.il>"]
readme = "README.md"
packages = [
    { include = "solvers" },
]
include = ["*.json"]

[tool.poetry.extras]
gpt = ["openai"]

[tool.poetry.dependencies]
# Core
python = "^3.8"
# Algo
the-spymaster-util = ">=2.0,<4.0"
codenames = "^2.2.0"
pydantic = "^1.9"
# Numbers
numpy = "^1.21"
pandas = "^1.3"
scipy = "^1.7"
networkx = "^2.6"
matplotlib = "^3.4.3"  # TODO: This should not be here
# Language
gensim = "^4.1"
generic-iterative-stemmer = "^0.2"
python-louvain = "^0.15"
editdistance = "^0.6"
# GPT
openai = { version = "^0.27", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "7.2.2"
coverage = "7.2.3"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.269"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
types-requests = "^2.30.0.0"

[tool.poetry.group.video.dependencies]
manim = "0.11.0"
#moviepy = "1.0.3"

[tool.poetry.group.dev.dependencies]
# Visuals
pyvis = "^0.1.9"
jupyter = "^1.0"
# Other
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Test

[tool.pytest.ini_options]
addopts = "-s --disable-pytest-warnings"

[tool.coverage.run]
source = ["solvers"]

# Lint

[tool.ruff]
select = ["B", "C", "E", "F", "W"]
ignore = [
    "E501",
]
exclude = ["local", ".deployment"]

[tool.black]
line-length = 120

[tool.isort]
skip = ["__init__.py"]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = ["build", "dist"]

[tool.pylint.main]
max-line-length = 120
good-names = [
    "ax",
    "e",
    "i",
]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "W1203",
    "fixme",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "unspecified-encoding",
    "broad-exception-caught",
]
extension-pkg-allow-list = ["pydantic"]
ignore = [
    "sna_hinter.py",
    "algebra.py",
    "olympic_hinter.py",
    "board_heuristics.py",
]
