# Poetry

[tool.poetry]
name = "codenames-solvers"
version = "1.9.3"
description = "Solvers implementation for Codenames board game in python."
authors = ["Michael Kali <michael.kali@mail.huji.ac.il>", "Asaf Kali <asaf.kali@mail.huji.ac.il>"]
readme = "README.md"
packages = [
    { include = "codenames_solvers" },
]
include = ["*.json"]

[tool.poetry.urls]
Homepage = "https://github.com/asaf-kali/codenames-solvers"
Repository = "https://github.com/asaf-kali/codenames-solvers"
Issues = "https://github.com/asaf-kali/codenames-solvers/issues"

[tool.poetry.extras]
gpt = ["openai"]
all = ["openai"]

[tool.poetry.dependencies]
# Core
python = "^3.12,<3.13"
the-spymaster-util = { version = "^4.0", extras = ["logging"] }
codenames = ">=5.5"
pydantic = ">=2.4"
# Numbers
numpy = "^1.21"
pandas = ">=1.6"
scipy = "^1.7"
networkx = "^2.6"
matplotlib = ">=3.8"  # TODO: This should not be here
# Language
gensim = ">=4.3.3"
generic-iterative-stemmer = ">=1.2"
python-louvain = "^0.15"
editdistance = ">=0.8.1"
# GPT
openai = { version = "^0.27", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "7.2.2"
coverage = "7.2.3"

[tool.poetry.group.lint.dependencies]
ruff = ">=0.7"
black = { version = ">=24.10", extras = ["jupyter"] }
isort = ">=5.13"
mypy = ">=1.13"
pylint = ">=3.3"
types-requests = "^2.30.0.0"
types-editdistance = "^0.8.0.20241221"
pandas-stubs = "^2.2.3.241126"

[tool.poetry.group.video.dependencies]
manim = "^0.18"
#moviepy = "1.0.3"

[tool.poetry.group.dev.dependencies]
# Visuals
pyvis = "^0.1.9"
jupyter = "^1.0"
# Other
pre-commit = "^3.2.2"
# Local playground
codenames = { extras = ["web"], version = ">=4.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Test

[tool.pytest.ini_options]
addopts = "-s --disable-pytest-warnings"

[tool.coverage.run]
source = [
    "codenames_solvers/cli",
    "codenames_solvers/cli",
    "codenames_solvers/models",
    "codenames_solvers/utils",
    "codenames_solvers/naive"
]

# Lint

[tool.ruff]
exclude = ["local", ".deployment", "*.ipynb"]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W"]
ignore = [
    "E501",
]

[tool.black]
line-length = 120

[tool.isort]
skip = ["__init__.py"]
profile = "black"

[tool.mypy]
exclude = ["build", "dist", "playground/", "codenames_solvers/olympic/"]

[[tool.mypy.overrides]]
module = "gensim.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "generic_iterative_stemmer.*"
ignore_missing_imports = true

[tool.pylint.main]
max-line-length = 120
good-names = [
    "ax",
    "e",
    "i",
]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "R0917",
    "W1203",
    "fixme",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "unspecified-encoding",
    "broad-exception-caught",
]
extension-pkg-allow-list = ["pydantic"]
ignore = [
    "codenames_solvers/sna",
    "codenames_solvers/olympic",
    "algebra.py",
    "board_heuristics.py",
]
